# modelo_procesamiento_yolo

./: .gitignore  README.md  pyproject.toml  run_mac.command  run_windows.bat
app/: main.py  processor.py  reports.py  schemas.py  store.py  tracker_aerial.yaml  video_writer.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_geometry.py
