[project]
name = "conteo-vial-yolo"
version = "0.1.0"
description = "Conteo direccional y seguimiento de tráfico en videos aéreos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "imageio-ffmpeg>=0.6.0",
    "lap>=0.5.12",
    "numpy>=1.23.0",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "ultralytics>=8.4.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
